# computer_algebra_system

./: .gitignore
Axion/: .gitignore  CMakeLists.txt
Axion/docs/: codebase_analysis.md  docs_guide.md  environment_setup.md  history.md  ideas.md  study.md  syntax_manual.md  test.md  workflow.md
Axion/docs/demos/: demo.01.basic-simplification.md  demo.02.differentiation.md  demo.03.polynomial-expansion.md  demo.04.extended-operators.md  demo.05.summation-product.md  demo.06.limits.md  demo.07.integration.md  demo.08.matrices.md  demo.09.equation-solving.md  demo.10.rewrite-rules.md  demo.11.taylor-series.md  demo.12.number-theory.md  demo.13.meta-rule-engine.md  demo.14.rule-driven-architecture.md
Axion/rules/: extra.rules
Axion/src/: main.cpp
Axion/src/core/: arena.cpp  arena.h  ast.cpp  ast.h
Axion/src/engine/: eval.cpp  eval.h  rules.cpp  rules.h  simplify.cpp  simplify.h
Axion/src/frontend/: lexer.cpp  lexer.h  parser.cpp  parser.h
Axion/src/modules/: calculus.cpp  calculus.h  integration.cpp  integration.h  limits.cpp  limits.h  matrix.cpp  matrix.h  number_theory.cpp  number_theory.h  polynomial.cpp  polynomial.h  rewrite.cpp  rewrite.h  series.cpp  series.h  solver.cpp  solver.h
Axion/src/output/: printer.cpp  printer.h
Axion/tests/: test_calculus.cpp  test_eval.cpp  test_lexer.cpp  test_parser.cpp  test_polynomial.cpp  test_series.cpp  test_simplify.cpp
mathematics_lab/: Algebra_and_geometry_lab1.ipynb  Algebra_and_geometry_lab2.ipynb  Algebra_and_geometry_lab3.py  Algebra_and_geometry_lab3_data.csv  Algebra_and_geometry_lab3_linear.py  Calculus_in_one_variable_lab2.ipynb  testsin.csv
